compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_26.diag.txt
/kt45461_26.kt:13:25: error: type mismatch: inferred type is {K & Out<String>} but Out<Float> was expected
    konst x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                        ^
/kt45461_26.kt:13:44: error: type mismatch: inferred type is {K & Out<String>} but Out<Float> was expected
    konst x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                                           ^
